Update (need permutation)